--- a/web_scrapper.ipynb
+++ b/web_scrapper.ipynb
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "Name: 0, dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -242,12 +242,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 63,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "# Creating necessary objects for while loop\n",
     "i = 0\n",
     "d = []\n",
     "gtm_tag = 'gtm.js'"
@@ -255,95 +254,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating an emty list\n",
+    "df = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n",
-      "Doest not have GTM\n"
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Does not have GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n",
+      "Has GTM\n"
      ]
     }
    ],
@@ -355,27 +365,111 @@
     "        script = soup.find_all('script')\n",
     "        script_string = str(script)\n",
     "        if script_string.index(gtm_tag) <> '[]':\n",
-    "            print 'Has GTM'\n",
+    "            print 'Has GTM' \n",
+    "            df.append(1)\n",
     "    except ValueError:\n",
-    "        print 'Doest not have GTM'\n",
+    "        print 'Does not have GTM' \n",
+    "        df.append(0)\n",
     "    i = i + 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Response [502]>\n"
+      "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n"
      ]
     }
    ],
    "source": [
-    "print d"
+    "print df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Check\n",
+      "0       1\n",
+      "1       1\n",
+      "2       1\n",
+      "3       1\n",
+      "4       1\n",
+      "5       1\n",
+      "6       1\n",
+      "7       1\n",
+      "8       1\n",
+      "9       1\n",
+      "10      1\n",
+      "11      1\n",
+      "12      1\n",
+      "13      1\n",
+      "14      1\n",
+      "15      1\n",
+      "16      1\n",
+      "17      1\n",
+      "18      1\n",
+      "19      1\n",
+      "20      1\n",
+      "21      1\n",
+      "22      1\n",
+      "23      1\n",
+      "24      1\n",
+      "25      1\n",
+      "26      1\n",
+      "27      1\n",
+      "28      1\n",
+      "29      1\n",
+      "..    ...\n",
+      "53      1\n",
+      "54      1\n",
+      "55      1\n",
+      "56      1\n",
+      "57      1\n",
+      "58      1\n",
+      "59      1\n",
+      "60      1\n",
+      "61      1\n",
+      "62      1\n",
+      "63      1\n",
+      "64      1\n",
+      "65      1\n",
+      "66      1\n",
+      "67      1\n",
+      "68      1\n",
+      "69      1\n",
+      "70      1\n",
+      "71      1\n",
+      "72      1\n",
+      "73      1\n",
+      "74      1\n",
+      "75      1\n",
+      "76      1\n",
+      "77      1\n",
+      "78      1\n",
+      "79      1\n",
+      "80      1\n",
+      "81      1\n",
+      "82      1\n",
+      "\n",
+      "[83 rows x 1 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_done = pd.DataFrame(df)\n",
+    "df_done.columns = ['Check']\n",
+    "print df_done"
    ]
   },
   {
